app/assets/stylesheets/application.scss
@import "bootstrap";
@import 'font-awesome';
@import 'gritter';

/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}


/*
 * Base structure
 */
//font-family: 'Open Sans Condensed', sans-serif;

h1, h2, h3, h4, h5, h6 {
font-family: 'Open Sans Condensed', sans-serif;
font-weight: bold;
}


html,
body {
  height: 100%;
  font-family: 'Roboto', sans-serif;
}

body {
  display: -ms-flexbox;
  display: -webkit-box;
  display: flex;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  justify-content: center;
  color: #fff;
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
}

.cover-container {
  max-width: 42em;
}

.card {
  z-index: -10;
}

/*
 * Header
 */
.masthead {
  margin-bottom: 2rem;
}

.masthead-brand {
  margin-bottom: 0;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: 700;
  color: rgba(255, 255, 255, .5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}

.masthead.mb-auto {
  width: 55rem;
}

/*
 * Cover
 */
.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: 700;
}


/*
 * Footer
 */
.mastfoot {
  color: rgba(255, 255, 255, .5);
}

/*
 * Custom Styles
 */

 .card-body {
  color: black;
  text-align: left;
 }

 .starter-template {
  padding: 9rem 1.5rem;
  text-align: center;
}

.auth-links a {
 color: black;
}

.register-text {
  text-align: right;
}


.login > .card {
  width: 22rem;
  margin: 0 auto;
  float: none;
}

.app-nav span {
  margin-left: 10px;
  margin-right: 10px;
}

#background {
  position: fixed;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  background: image-url('background.jpg') no-repeat;
  background-size: cover;
}

.app-footer {
  color: white;
}

.tech-news {
  color: black;
  margin: 20px;
}

.tech-news a {
  color: green;
}

.tech-news > .card {
  padding: 30px;
}

.tech-news-title {
  margin-top: 35px;
}

.contact-links a {
  text-decoration: none;
  &:hover {
    font-weight: bold;
  }
}

.app-card-container {
  text-align: left;
}

.app-card-container > .card {
  padding: 25px;
  background-color: rgba(0, 0, 0, 0.2);
}

.contact-info {
  display: flex;
  align-items: center;
}

.skill {
  margin-bottom: 8px;
  margin-top: 8px;
}

.profile-img {
  border: 1px solid gray;
  padding: 1px;
}

.inner-app-nav {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.card-about {
  margin-top: 55px;
}

